# farcaster-graph

./: .gitignore  README.md  db_schema.sql
pipeline/: .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  crontab.txt  cura_utils.py  db_utils.py  docker-compose.yaml  export_existingConnections.sql  export_existingConnections_addr.sql  export_l1rep6rec3m12enhancedConnections.sql  export_l1rep6rec3m12enhancedConnections_addr.sql  gen_igraph.py  go_eigentrust.py  igraph-docker-compose.yml  igraph.Dockerfile  igraph.nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  run_blast_osuji_top_casts.sh  run_cast_pipeline.sh  run_channel_metrics.sh  run_channel_openrank.sh  run_channel_scraper.sh  run_channel_scraper_v2.sh  run_channel_scraper_v3.sh  run_channel_scraper_v4.sh  run_create_degen_db_functions.sh  run_download_pqt_files_v1.sh  run_eigen2_postgres_sql.sh  run_eigen8_postgres_sql.sh  run_fcm_webhook_sync.sh  run_fetch_channel_top_caster.sh  run_fetch_top_caster.sh  run_fetch_top_spammers.sh  run_fid_cast_action_pipeline.sh  run_frame_scraper.sh  (+19 more)
pipeline/casts/: cast_db_utils.py  interactions.py  main.py  main_blast_osuji_top_casts.py  main_fetch_top_casters.py  main_fetch_top_spammers.py
pipeline/channels/: .Top_Channels.csv.swp  Bot_Fids.csv  Channel_Domain.csv  Channel_Domain.prod.csv  Channel_Domain.test.csv  Leaderboard_20250107.lower.csv  Leaderboard_20250117.lower.csv  Leaderboard_20250120.lower.csv  Leaderboard_20250123.lower.csv  Leaderboard_20250124.lower.csv  Leaderboard_20250128.lower.csv  Seed_Fids.csv  Top_Channels.csv  Top_Channels.csv~  TrendingChannels.csv  Trending_Channels.csv  channel_db_utils.py  channel_model.py  channel_queries.py  channel_utils.py  compute_trust.py  go_eigentrust.py  main.py  main_channel_rank.py  main_fetch_channel_top_casters.py  main_metrics.py  main_notify.py  main_notify_channel_top_cast.py  main_notify_daily_trending.py  main_notify_leaderboard.py  main_notify_weekly_mods.py  main_openrank.py  main_points.py  main_points_balance.py  main_tokens.py  main_v2.py  neynar_db_utils.py  openrank_utils.py
pipeline/dag_utils/: clear_task_instance.py  combine_csv.py  dune_backup.py
pipeline/dags/: dag_automod_to_postgres.py  dag_backup_sandbox_db.py  dag_backup_to_s3_v0.py  dag_backup_to_s3_v1.py  dag_copy_graph_files_to_eigen4_v0.py  dag_copy_graph_files_to_replicas_v0.py  dag_copy_graph_files_to_replicas_v1.py  dag_copy_graph_files_to_sandbox_dev_v1.py  dag_degen_tips_processing.py  dag_extract_refresh_frame_url_v0.py  dag_fcm_webhook_sync.py  dag_gen_channel_openrank.py  dag_gen_channel_ranking.py  dag_gen_channel_ranking_v2.py  dag_gen_channel_ranking_v3.py  dag_gen_channel_ranking_v33.py  dag_gen_channel_ranking_v4.py  dag_gen_globaltrust.py  dag_gen_globaltrust_by_date_v0.py  dag_gen_globaltrust_v1.py  dag_gen_globaltrust_v2.py  dag_gen_personal_graph_replica_v0.py  dag_gen_personal_graph_replica_v1.py  dag_insert_degen_ranking_v0.py  dag_insert_to_dune_table.py  dag_migrate_dune_table.py  dag_notify_channel_daily_trending.py  dag_notify_channel_leaderboard.py  dag_notify_channel_top_cast.py  dag_notify_channel_weekly_mods.py  dag_refresh_fip2_tokens.py  dag_refresh_rank_view_v0.py  dag_run_cast_pipeline_v0.py  dag_run_frame_pipeline_v0.py  dag_send_automated_casts.py  dag_sync_sandbox_casts.py  dag_sync_sandbox_db.py  dag_sync_sandbox_db_dev.py  dag_sync_sandbox_ranks.py  dag_token_distribution.py  (+4 more)
pipeline/degen/: create_degen_sql_functions.py
pipeline/extractors/: automod_extractor.py  channel_extractor_utils.py  cura_mod_extractor.py  extract_channel_data.sh  extract_channel_fids.sh  extract_channel_followers.sh  extract_channel_members.sh  extract_cura_mod.sh  main_channel_data.py  main_channel_fids.py  main_channel_followers.py  main_channel_members.py  warpcast_extractor.py
pipeline/fcm/: webhook_sync.py
pipeline/frames/: frames_db_utils.py  incremental_load_cast_mapping.sql  incremental_load_labels.sql  main.py  scrape_utils.py  test_urls.py
pipeline/globaltrust/: compute.py  db_utils.py  export_localtrust_daily_stats.sql  gen_globaltrust.py  go_eigentrust.py  queries.py  test_data.py
pipeline/graph/: Dockerfile  docker-compose.yml  export_existingConnections_addr.sql  export_existingConnections_fid.sql  export_l1rep6rec3m12enhancedConnections_addr.sql  export_l1rep6rec3m12enhancedConnections_fid.sql  export_localtrust_daily_stats.sql  fetch_nodes_edges.py  gen_igraph.py  gen_personal_graph.py  gen_personal_graph_amp.py  gen_personal_graph_amp_v1.py  gen_personal_graph_tgmp.py  graph_utils.py  nginx.conf  pre_compute_personal.py  rechunk_graph_pqt.py  serve_igraph.py
pipeline/samples/: pretrust.csv
pipeline/schema/: 20240403-channel_db_schema.sql  (+11 more)
serve/: .dockerignore  .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scratchpad.md
(+179 files in other folders)
