[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fcgraph-pipeline"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Vijay Mariadassou", email = "vijay@karma3labs.com" },
    { name = "Eugene Kim", email = "ek@karma3labs.com" },
    { name = "Ebuka Osuji", email = "osuji@karma3labs.com" },
]
maintainers = [
    { name = "Ebuka Osuji", email = "osuji@karma3labs.com" },
    { name = "Eugene Kim", email = "ek@karma3labs.com" },
]
dependencies = [
    "pandas>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "igraph>=0.11.3,<0.12",
    "psutil>=5.9,<6",
    "psycopg2-binary>=2.9,<3",
    "pydantic-settings>=2.2,<3",
    "sqlalchemy>=1.4,<2",
    "requests>=2.31,<3",
    "loguru>=0.7.2,<0.8",
    "beautifulsoup4>=4.12,<5",
    "aiohttp>=3.9,<4",
    "tldextract>=5.1,<6",
    "niquests>=3.5,<4",
    "polars>=0.20.27,<0.21",
    "pyarrow>=16.1,<17",
    "fastapi>=0.111.0,<0.112",
    "apache-airflow>=2.9,<3",
    "dune-client>=1.7,<2",
    "openrank-sdk>=0.2.2,<0.3",
    "apache-airflow-providers-ssh>=3.12.0,<4",
    "asyncpg>=0.29.0,<0.30",
    "tomlkit>=0.13.2,<0.14",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
dev = [
    "flit>=3.12,<4",
    "black>=25.1,<26",
    "isort>=6.0,<7",
    "sqlfluff>=3.4,<4",
]

[project.urls]
Homepage = "https://github.com/Karma3Labs/farcaster-graph"
Repository = "https://github.com/Karma3Labs/farcaster-graph.git"
Issues = "https://github.com/Karma3Labs/farcaster-graph/issues"

[project.scripts]
# fcgraph-XYZ = "k3l.fcgraph.pipeline.cli.XYZ:main"

[tool.flit.module]
name = "k3l.fcgraph.pipeline"

[tool.isort]
skip_gitignore = true
