[tool.poetry]
name = "serve"
version = "0.1.0"
description = ""
authors = ["Vijay Mariadassou <vijay@karma3labs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.25"
loguru = "^0.7.2"
igraph = "^0.11.3"
pydantic-settings = "^2.1.0"
psutil = "^5.9.8"
pandas = {extras = ["performance"], version = "^2.2.2"}
numpy = "^1.26.4"
requests = "^2.31.0"
opentelemetry-distro = "0.43b0"
opentelemetry-instrumentation-fastapi = "0.43b0"
opentelemetry-instrumentation-logging = "0.43b0"
opentelemetry-exporter-otlp = "1.22.0"
prometheus-client = "0.19.0"
asgi-correlation-id = "^4.3.1"
niquests = "3.5.5"
py-memoize = "^3.1.1"
httpx = "^0.28.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
