[tool.poetry]
name = "serve"
version = "0.1.0"
description = ""
authors = ["Vijay Mariadassou <vijay@karma3labs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.25"
loguru = "^0.7.2"
igraph = "^0.11.3"
pydantic = "^2.9.0"
pydantic-settings = "^2.1.0"
psutil = "^5.9.8"
pandas = { extras = ["performance"], version = "^2.2.2" }
numpy = "^1.26.4"
requests = "^2.31.0"
opentelemetry-distro = "0.43b0"
opentelemetry-instrumentation-fastapi = "0.43b0"
opentelemetry-instrumentation-logging = "0.43b0"
opentelemetry-exporter-otlp = "1.22.0"
prometheus-client = "0.19.0"
asgi-correlation-id = "^4.3.1"
niquests = "^3.14.0"
py-memoize = "^3.1.1"
async-lru = "^2.0.5"
eth-typing = "^5.2.1"
eth-utils = "^5.3.0"
eth-hash = { extras = ["pycryptodome"], version = "^0.7.1" }
cashews = { extras = ["diskcache"], version = "^7.4.0" }
sqlfluff = "^3.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "serve"
version = "0.1.0"
requires-python = ">=3.12"

[tool.sqlfluff.core]
dialect = "postgres"

[tool.isort]
skip_gitignore = true

[tool.ruff.lint]
# TODO(ek) - re-enable other check rules, by using extend-select instead
select = ["I"]
